# aws_x_ray_sam

./: README.md  dependencies.sh  pyproject.toml  samconfig.toml  template.yaml
hello_world/: app.py  requirements.txt
